--- a/P003187.opf/meta.yml
+++ b/P003187.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P003187
+id: P003187
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W2DB25427
   title: མི་དབང་རྟོགས་བརྗོད
-  volume: ''
   author: ''
+  volumes: {}
