--- a/P003187.opf/layers/v001/Pagination.yml
+++ b/P003187.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 73666f88e63845a2aecf6401a280f9b0
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   bb1a61f1add3488caef80dbe8eb8e8eb:
