--- a/P003187.opf/meta.yml
+++ b/P003187.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P003187
 initial_creation_type: ocr
+created_at: 29/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W2DB25427
   title: མི་དབང་རྟོགས་བརྗོད
