--- a/P003187.opf/meta.yml
+++ b/P003187.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P003187
 initial_creation_type: ocr
 created_at: 29/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 10:46:09.390610
 source_metadata:
   id: bdr:W2DB25427
   title: མི་དབང་རྟོགས་བརྗོད
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 890
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
